test_files/positive/stream/indirect-filter.stats_strict
Version : 1.7
Incremental updates : 0
Neither updates nor object streams nor free objects nor encryption
Object count : 7
PDF error : Invalid value for stream /Filter for object 4 !
