test_files/negative/stream/recursive-length.stats_strict
Version : 1.5
Incremental updates : 0
Neither updates nor object streams nor free objects nor encryption
PDF error : Expected integer for stream /Length for object 4 !
